--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,13 +2,22 @@
     "version": "0.2.0",
     "configurations": [
 
+
         {
-            "name": "Python Debugger: Current File with Arguments",
+            "name": "Test",
             "type": "debugpy",
             "request": "launch",
             "program": "research-assistant-mcp/research-assistant.py",
             "console": "integratedTerminal",
             "args": "--library_directory test_data/pdfs --chroma_db_path test_data/pdfs_db --limit_text -1 --update_db False"
+        },
+        {
+            "name": "Mendeley",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "research-assistant-mcp/research-assistant.py",
+            "console": "integratedTerminal",
+            "args": "--library_directory \"/Users/hanisaf/Documents/Mendeley Desktop\" --chroma_db_path \"/Users/hanisaf/Documents/Mendeley Chroma\" --limit_text -1 --update_db True"
         }
     ]
 }
