--- a/research-assistant-mcp/requirements.txt
+++ b/research-assistant-mcp/requirements.txt
@@ -16,7 +16,11 @@ pytesseract>=0.3.10
 
 # Image processing library
 Pillow>=10.0.0
-
+sentence-transformers==2.2.2
+huggingface-hub==0.16.4
+python-dateutil==2.8.2
+numpy<2.0.0
+torch>=2.0.0
 # Optional: For better OCR results, you may want to install additional packages
 # opencv-python>=4.8.0  # For image preprocessing
 # numpy>=1.24.0  # For numerical operations on images
